<resources>
    <string name="app_name">Digikofy</string>
    <string name="lower_app_name">digikofy</string>

    <!-- Accueil -->
    <string name="home_page_title">Bonjour ☕</string>
    <string name="home_page_new_coffee_button">Préparer un nouveau café</string>
    <string name="home_page_next_coffee_title">Prochaine préparation</string>
    <string name="home_page_prepare_now_button">Préparer maintenant</string>
    <string name="home_page_show_all_next_coffees_button">Voir toutes les préparations à venir</string>
    <string name="home_page_last_coffee_title">Dernière préparation</string>
    <string name="home_page_prepare_coffee_again_button">Préparer à nouveau</string>
    <string name="home_page_show_all_past_coffees_button">Voir toutes les préparations passées</string>

    <!-- Machines -->
    <string name="machine">Machine</string>
    <string name="machine_page_title">Mes machines</string>
    <string name="machine_list_size_zero_label">Aucune machine</string>
    <string name="machine_page_add_button">Nouvelle machine</string>

    <!-- Préparations -->
    <string name="preparation">Préparation</string>
    <string name="preparation_page_title">Mes préparations</string>
    <string name="preparation_list_size_zero_label">Aucune préparation</string>
    <string name="preparation_page_add_button">Nouvelle préparation</string>
    <string name="preparation_page_saved_coffees_tab">Enregistrées</string>
    <string name="preparation_page_next_coffees_tab">À venir</string>
    <string name="preparation_page_past_coffees_tab">Passées</string>
    <string name="preparation_page_plan_coffee">Planifier</string>

    <!-- Navigation -->
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_machine_item">Machines</string>
    <string name="bottom_coffee_item">Cafés</string>

    <!-- Auth -->
    <string name="auth_page_register">Inscription</string>
    <string name="auth_page_login">Connexion</string>
    <string name="auth_page_email_label">Email</string>
    <string name="auth_page_password_label">Mot de passe</string>
    <string name="auth_page_confirm_password_label">Confirmation mot de passe</string>
    <string name="auth_page_register_button">S\'inscrire</string>
    <string name="auth_page_login_button">Se connecter</string>

    <!-- Autres -->
    <string-array name="machine_types">
        <item>Standard</item>
        <item>Entreprise</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>