<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_register_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/medium_cardview_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_app_name"
                android:fontFamily="@font/cream"
                android:textColor="@color/white"
                android:textSize="@dimen/large_dimen_text"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_page_register"
            app:layout_constraintTop_toBottomOf="@+id/fl_register_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/default_dimen_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="@dimen/medium_dimen" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_dimen_text"
            android:layout_marginStart="@dimen/short_dimen_text"
            android:layout_marginEnd="@dimen/short_dimen_text"
            android:hint="@string/auth_page_email_label"
            app:layout_constraintTop_toBottomOf="@id/tv_register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/short_dimen_text"
            android:hint="@string/auth_page_password_label"
            app:layout_constraintTop_toBottomOf="@id/til_register_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_dimen_text"
            android:layout_marginStart="@dimen/short_dimen_text"
            android:layout_marginEnd="@dimen/short_dimen_text"
            app:layout_constraintTop_toBottomOf="@+id/til_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/auth_page_register_button"
            android:background="@color/colorAccent"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_page_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/tiny_dimen_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>