<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_new_preparation"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/very_large_dimen"
            android:layout_height="@dimen/main_create_coffee_button_dimen"
            android:text="@string/home_page_new_coffee_button"
            android:drawableStart="@drawable/ic_add_circle_outline"
            android:drawableTint="@color/blue"
            style="@style/NewCoffeeHomeButton"
            tools:targetApi="m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_next_coffee_title"
            style="@style/BoldTitleTextStyle24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/medium_cardview_height">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_next_preparation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_cardview_height"
                style="@style/CardStyle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingLeft="@dimen/short_dimen"
                        android:paddingRight="@dimen/short_dimen"
                        android:paddingTop="@dimen/very_short_dimen"
                        android:paddingBottom="@dimen/very_tiny_dimen">

                        <TextView
                            android:id="@+id/tv_next_preparation_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ma préparation"
                            style="@style/MediumTitleTextStyle24"
                            android:paddingBottom="@dimen/very_tiny_dimen"/>

                        <TextView
                            android:id="@+id/tv_next_preparation_coffee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Espresso"
                            style="@style/DefaultTextStyle"
                            android:paddingBottom="@dimen/very_tiny_dimen"/>

                        <TextView
                            android:id="@+id/tv_next_preparation_when"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Préparation dans 1h"
                            style="@style/DefaultTextStyle"
                            android:paddingBottom="@dimen/very_tiny_dimen"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_next_preparation"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/medium_dimen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/home_page_prepare_now_button"
                        style="@style/DefaultButton" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_no_next_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/short_dimen"
                android:text="Aucune préparation à venir"
                style="@style/RegularGreyTextStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_error_next_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/short_dimen"
                android:text="Impossible d'afficher la prochaine préparation"
                style="@style/RegularGreyTextStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <RelativeLayout
                android:id="@+id/loading_next_preparation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_next_preparations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_page_show_all_next_coffees_button"
            style="@style/ShowAllButtonTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_last_coffee_title"
            style="@style/BoldTitleTextStyle24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/medium_cardview_height">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_last_preparation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_cardview_height"
                style="@style/CardStyle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingLeft="@dimen/short_dimen"
                        android:paddingRight="@dimen/short_dimen"
                        android:paddingTop="@dimen/very_short_dimen"
                        android:paddingBottom="@dimen/very_tiny_dimen">

                        <TextView
                            android:id="@+id/tv_last_preparation_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ma préparation"
                            style="@style/MediumTitleTextStyle24"
                            android:paddingBottom="@dimen/very_tiny_dimen"/>

                        <TextView
                            android:id="@+id/tv_last_preparation_coffee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Espresso"
                            style="@style/DefaultTextStyle"
                            android:paddingBottom="@dimen/very_tiny_dimen"/>

                        <TextView
                            android:id="@+id/tv_last_preparation_when"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Préparée il y a 1h"
                            style="@style/DefaultTextStyle"
                            android:paddingBottom="@dimen/very_tiny_dimen"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_last_preparation"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/medium_dimen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/home_page_prepare_coffee_again_button"
                        style="@style/DefaultButton" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_no_last_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/short_dimen"
                android:text="Aucune préparation passée"
                style="@style/RegularGreyTextStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_error_last_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/short_dimen"
                android:text="Impossible d'afficher la dernière préparation"
                style="@style/RegularGreyTextStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <RelativeLayout
                android:id="@+id/loading_last_preparation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_last_preparations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_page_show_all_past_coffees_button"
            style="@style/ShowAllButtonTextStyle" />

    </LinearLayout>
</layout>
